spelling corrections,alignment,Style

--- a/assets/css/customstyle.css
+++ b/assets/css/customstyle.css
@@ -918,7 +918,7 @@ button:focus {
   box-shadow: 0px 0px 25px 0px #ddddddbf;
   text-align: center;
   position: relative;
-  padding-top: 25px;
+  padding-top: 10px;
   padding-bottom: 25px;
   padding-left: 10px;
   padding-right: 10px;
@@ -5177,4 +5177,8 @@ padding-bottom: 29px;
   background-color: #ffffff;
   text-align: center;
   border-radius: 10px;
+}
+.services-item{
+  height: 60px;
+  line-height: unset;
 }
